--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,4 +17,7 @@
 
   <h1>{{MyVal}}</h1>
 
+  <ion-button (click)="printCurrentPosition()">Get new pos</ion-button>
+  <h1>latitude: {{location?.coords?.latitude}}, longitude:{{location?.coords?.longitude}}</h1>
+
 </ion-content>
