Slider and all working

--- a/src/app/gps/gps.page.html
+++ b/src/app/gps/gps.page.html
@@ -14,7 +14,7 @@
     <h1>le map</h1>
     <div id='map'></div>
   
-    <ion-button (click)="printCurrentPosition()">Get new pos</ion-button>
+    <ion-button (click)="printCurrentPosition()">Display current pos</ion-button>
     <h1>latitude: {{location?.coords?.latitude}}, longitude:{{location?.coords?.longitude}}</h1>
   
     <ion-button color="danger" (click)="followPos()">Update current pos</ion-button>
