--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,6 +11,8 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-spinner color="warning" name="crescent"></ion-spinner>
+
   <swiper-container (slidechange)="swiperSlideChange($event)" [loop]="true" [pagination]="true" [zoom]="true">
     <swiper-slide>
       <h1>Slide 1</h1>
